<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="30dp"
    android:paddingRight="20dp"
    android:paddingBottom="40dp"
    tools:context=".ui.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/register_et_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Full Name"
            android:inputType="textPersonName"
            android:textColorHint="@color/white" />

        <ImageView
            android:id="@+id/register_img_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    </LinearLayout>

    <EditText
        android:id="@+id/register_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/email_address_str"
        android:inputType="textPersonName"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/register_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textColorHint="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/register_et_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Pass"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/register_et_re_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Re-Pass"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <Spinner
        android:id="@+id/register_sp_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:entries="@array/country_list"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/register_et_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Birthdate"
        android:inputType="date"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/register_et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Phone"
        android:inputType="phone"
        android:textColorHint="@color/white" />

    <CheckBox
        android:id="@+id/register_cb_is_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/is_administrator_str"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <RadioGroup
        android:id="@+id/register_rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/register_rb_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male_str"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/register_rb_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female_str"
            android:textColor="@color/white" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register_btn_save"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:background="@color/Porcelain"
            android:text="@string/save_str"
            android:textAllCaps="false"
            android:textColor="@color/MacYellow"
            android:textSize="20sp"
            app:backgroundTint="@null"
            app:cornerRadius="10dp" />
    </LinearLayout>
</LinearLayout>